<resources>
    <string name="app_name">ParameterController</string>

    <!-- General -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Intent Extras -->
    <string name="option_id">OPTION_ID</string>

    <!-- Home Activity -->
    <string name="remove_option">Remove option?</string>
    <string name="setup_parameters">Setup &amp; Edit Parameters</string>
    <string name="play">Play</string>
    <string name="tilt">Tilt</string>
    <string name="edit_presets">Edit Presets</string>
    <string name="edit_space">Edit Space</string>

    <!-- Edit Activity -->
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="ipAddress">IP Address</string>
    <string name="portNumber">Port Number</string>
    <string name="address">Address</string>

    <!-- Setup Activity -->
    <string name="setup">Setup</string>

    <!-- Parameter Space Activity -->
    <string name="parameter_space">Parameter Space</string>
    <string name="play_parameter_space">Play Parameter Space</string>
    <string name="edit_parameter_space">Edit Parameter Space</string>
    <string name="tilt_parameter_space">Tilt Parameter Space</string>
    <string name="standard_deviation">Standard Deviation</string>
    <string name="amplitude">Amplitude</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <!-- Rotation Space Activity -->
    <string name="rotation_space">Rotation Space</string>
    <string name="train">Train</string>
    <string name="classify">Classify</string>
    <string name="interpolate">Interpolate</string>
    <string name="clear">Clear</string>
    <string name="add_training_instance">Add Training Instance</string>
    <string name="adding_training_instances">Adding Training Instances</string>

    <!-- Shift Space Activity -->
    <string name="shift_space">Shift Space</string>

</resources>
