<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/optionCardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/optionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                tools:text="Untitled1"/>

            <ImageView
                android:id="@+id/optionCardToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_expand_more_black_24dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/optionCardExpand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible" >

            <TextView
                android:id="@+id/setupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionCardHeader"
                android:text="@string/setup_parameters" />

            <LinearLayout
                android:id="@+id/setupOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setupTitle"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/optionSetup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/optionCardButton"
                    android:text="@string/setup" />

                <TextView
                    android:id="@+id/optionEditPreset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/optionCardButton"
                    android:text="@string/edit_presets" />

            </LinearLayout>


            <TextView
                android:id="@+id/parameterSpaceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setupOptions"
                style="@style/optionCardHeader"
                android:text="@string/parameter_space" />

            <LinearLayout
                android:id="@+id/paramSpaceOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/parameterSpaceLabel"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/optionParamSpaceEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/optionCardButton"
                    android:text="@string/edit_space" />

                <TextView
                    android:id="@+id/optionParamSpacePlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/optionCardButton"
                    android:text="@string/play" />

                <TextView
                    android:id="@+id/optionParamSpaceTilt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/optionCardButton"
                    android:text="@string/tilt" />

            </LinearLayout>

            <TextView
                android:id="@+id/optionRotationHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/paramSpaceOptions"
                style="@style/optionCardHeader"
                android:text="@string/rotation_space" />

            <TextView
                android:id="@+id/optionRotationSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/optionRotationHeader"
                style="@style/optionCardButton"
                android:text="@string/play" />

            <TextView
                android:id="@+id/optionShiftSpaceHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/optionRotationSpace"
                style="@style/optionCardHeader"
                android:text="@string/shift_space" />

            <TextView
                android:id="@+id/optionShiftSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/optionShiftSpaceHeader"
                style="@style/optionCardButton"
                android:text="@string/play" />

            <ImageView
                android:id="@+id/optionDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_clear_black_24dp"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
