<?xml version="1.0" encoding="utf-8"?>
<etc.a0la0.osccontroller.app.ui.rotationspace.PagerTrainView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonContainer">

            <LinearLayout
                android:id="@+id/presetContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </android.support.v4.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/buttonContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/clear"/>

            <ToggleButton
                android:id="@+id/buttonAddInstance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textOff="@string/add_training_instance"
                android:textOn="@string/adding_training_instances"/>

        </LinearLayout>

    </RelativeLayout>

</etc.a0la0.osccontroller.app.ui.rotationspace.PagerTrainView>
